--- a/index.html
+++ b/index.html
@@ -1,10 +1,20 @@
 <!DOCTYPE HTML> <html>
  <head>
-<meta charset="UTF-8" /> <title>tu nombre</title>
+<meta charset="UTF-8" /> <title>Hugo</title>
 <link rel="stylesheet" type="text/css" href="style.css" /> <!--[if IE]>
 <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script> <![endif]-->
  </head>
----> Esto solo la primera vez, para hacer constancia del acceso de Hugo
  <body>
+<header>
+<h1>CIFP Cesar</h1> </header>
+<aside>
+<p></p>
+</aside>
+<section>
+</section>
+<footer>
+<p>&copy; 2023 – designed by <a href="http://www.hugo.org" title="Hugo">CIFP Cesar</a></p>
+</footer>
+
  </body>
 </html>
